# fixit_tiff

./: LICENSE  Makefile  README.1st  README.aix  README.compile  README.cygwin  README.md  README.windows  cleanup_baseline.c  cleanup_datetime.c  cleanup_order.c  doxygen.conf  fixit_tiff  fixit_tiff.c  fixit_tiff.h  fixit_tiff.prj  makefile.aix
checkit/: BUGS  FAQ  Makefile  README.1st  README.TIFFspecification  README.grammar  README.regex  TODO  check.h  check_datetime.c  check_helper.c  check_helper.h  check_ifd.c  check_tag.c  check_tag_has_some_of_these_values.c  check_tag_has_valid_asciivalue.c  check_tag_has_valid_type.c  check_tag_has_value.c  check_tag_has_value_in_range.c  checkit_tiff.c  config_dsl.grammar.c  config_dsl.grammar.peg  config_dsl.txt  config_parser.c  config_parser.h  test.c
checkit/example_configs/: cit_tiff6_baseline_SLUB.cfg  cit_tiff6_baseline_SLUBrelaxed.cfg  cit_tiff_baseline_minimal.cfg  config_dsl__baseline_minimal.txt  config_dsl__baseline_tiff6.txt  config_dsl__baseline_tiff6extended.txt  config_dsl__broken2_mini.txt  config_dsl__broken_mini.txt  config_dsl__only_dpi.txt
checkit/tagrules/: check_datetime.c  check_tag.c  check_tag_has_some_of_these_values.c  check_tag_has_valid_asciivalue.c  check_tag_has_valid_type.c  check_tag_has_value.c  check_tag_has_value_in_range.c
checkit/tiffs_should_pass/: minimal_valid.tiff
checkit_tiff/: FAQ  README.1st  TODO  check_helper.h  check_ifd.c  config_dsl.grammar.peg  config_parser.h  version.mk
checkit_tiff/example_configs/: cit_tiff-a_whitepaper.cfg  cit_tiff6_baseline_SLUB.cfg  cit_tiff6_legacy_SLUB.cfg
checkit_tiff/tagrules/: check_datetime.c  check_tag_has_valid_asciivalue.c  check_tag_has_valid_type.c  check_tag_has_value.c  check_tag_has_value_in_range.c
checkit_tiff/tiffs_should_fail/: wrong_subfile_type__wrong_xresolution_alignment.tif
common/: doxygen.conf
examples/: example_tiff.tiff  minimal_valid.tiff
fixit/: Makefile  check_baseline.c  check_baseline.h  check_datetime.c  cleanup_baseline.c  cleanup_datetime.c  cleanup_order.c  cleanup_tag.c  fixit_tiff.c  fixit_tiff.h  tiff_helper.c  tiff_helper.h
src/: CMakeLists.txt  Makefile  check_baseline.c  check_datetime.c  check_datetime.h  check_icc_header.c  check_icc_header.h  cleanup_baseline.c  cleanup_datetime.c  cleanup_icc_header.c  cleanup_order.c  cleanup_tag.c  cleanup_tagtypes.c  find_potential_IFD_offsets.c  fixit_tiff.c  fixit_tiff.h  tiff_helper.c  toolchain-mingw32.cmake
src/archeological_tools/: find_potential_IFD_offsets.c  print_ifd_at_adress.c
